show identity on style 2
Signed-off-by: Jamal Abo Mokh <jamalabomokh490@gmail.com>

--- a/views/styles/2/index.hbs
+++ b/views/styles/2/index.hbs
@@ -52,7 +52,7 @@
                             {{i18n "section_personal_detail_identity"}}
                         </div>
                         <div class="col field-value">
-                            {{!-- {{user.identity}} --}}
+                            {{user.identity}}
                         </div>
                     </div>
                     <div class="row items-row">
